# rag-chatbot

./: .gitignore  CLAUDE.md  frontend-changes.md  pyproject.toml  uv-vs-venv-comparison.md
.github/scripts/: deepseek_agent.py
.github/workflows/: auto-fix.yml  claude.yml  pr-review-comprehensive.yml
backend/: ai_generator.py  config.py  rag_system.py  search_tools.py  vector_store.py
backend/tests/: conftest.py  test_ai_generator.py  test_api_endpoints.py  test_course_search_tool.py  test_rag_integration.py
chroma_db/: chroma.sqlite3
frontend/: .prettierignore  .prettierrc  index.html  package.json  quality-check.sh  script.js  style.css
