[project]
name = "starting-codebase"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "chromadb==1.0.15",
    "sentence-transformers==5.0.0",
    "fastapi==0.116.1",
    "uvicorn==0.35.0",
    "python-multipart==0.0.20",
    "python-dotenv==1.1.1",
    "openai>=2.43.0",
]

[dependency-groups]
dev = [
    "playwright>=1.60.0",
    "pytest>=9.1.1",
    "httpx>=0.28.0",
]

[tool.pytest.ini_options]
testpaths = ["backend/tests"]
asyncio_mode = "auto"
markers = [
    "unit: Unit tests for individual components",
    "integration: Integration tests that exercise multiple components",
    "api: FastAPI endpoint / HTTP-level tests",
    "slow: Tests that are slow and may be skipped in quick runs",
]
